  * Arbiters now support concurrent read access.
  * Add a field starpu_task::where similar to starpu_codelet::where
    which allows to restrict where to execute a task. Also add
    STARPU_TASK_WHERE to be used when calling starpu_task_insert().
  * Add SubmitOrder trace field.
  * Add workerids and workerids_len task fields.
  * Add priority management to StarPU-MPI. Can be disabled with
  the STARPU_MPI_PRIORITIES environment variable.
  * Add STARPU_MAIN_THREAD_CPUID and STARPU_MPI_THREAD_CPUID environment
    variables.
  * Add disk to disk copy functions and support asynchronous full read/write
    in disk backends.
  * New starpu_task_insert parameter STARPU_CL_ARGS_NFREE which allows
    to set codelet parameters but without freeing them.
  * New starpu_task_insert parameter STARPU_TASK_DEPS_ARRAY which
    allows to declare task dependencies similarly to
    starpu_task_declare_deps_array()
  * Add dependency backward information in debugging mode for gdb's
    starpu-print-task
  * Add sched_data field in starpu_task structure.
  * New starpu_fxt_tool option -label-deps to label dependencies on
    the output graph
  * New environment variable STARPU_GENERATE_TRACE_OPTIONS to specify
    fxt options (to be used with STARPU_GENERATE_TRACE)
  * New function starpu_task_set() similar as starpu_task_build() but
    with a task object given as the first parameter
  * New functions
    starpu_data_partition_submit_sequential_consistency() and
    starpu_data_unpartition_submit_sequential_consistency()

Changes:
  * Vastly improve simgrid simulation time.
  * Switch default scheduler to lws.
  * Add "to" parameter to pull_task and can_push methods of components.

Small changes:
  * Use asynchronous transfers for task data fetches with were not prefetched.
  * Allow to call starpu_sched_ctx_set_policy_data on the main
    scheduler context
  * Fonction starpu_is_initialized() is moved to the public API.

StarPU 1.2.5 (git revision xxx)